<resources>
    <string name="app_name">DrGoAway</string>
    <string name="string_username">Username</string>
    <string name="string_passwd">Password</string>
    <string name="string_logout">Sign out</string>
    <string name="string_login">Sign in</string>
    <string name="string_dashboard">Dashboard</string>
    <string name="string_tip">Can be used in routers</string>
    <string name="string_version">v1.1</string>
    <string name="msg_login_failed">Incorrect password or run out of traffic</string>
    <string name="msg_login_failed_unknown">Login failed_unknown</string>
    <string name="msg_login_succeeded">Login succeeded</string>
    <string name="msg_connect_failed">Connect failed</string>
    <string name="msg_server_error">Server error</string>
    <string name="msg_logout_succeeded">Logout succeeded</string>
</resources>
